# zk-verification

./: Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
programs/zk-verification/: Cargo.toml
programs/zk-verification/src/: credentials.rs  errors.rs  issuer.rs  lib.rs  nullifier.rs  proof.rs  proof_systems.rs  public_inputs.rs  selective_disclosure.rs  tests.rs  verifier.rs
sdk/typescript/src/: ZkVerificationClient.ts
tests/: zk-verification.ts
